--- a/react/01.react-basic.md
+++ b/react/01.react-basic.md
@@ -111,3 +111,28 @@ class ExampleComponent extends React.Component {
   - componentWillUnmount
 
 因为 reconciliation 阶段是可以被打断的，所以 reconciliation 阶段会执行的生命周期函数就可能会出现调用多次的情况，从而引起 Bug。所以对于 reconciliation 阶段调用的几个函数，除了 shouldComponentUpdate 以外，其他都应该避免去使用。
+
+### 事件处理
+- React 事件的命名采用小驼峰式（camelCase），而不是纯小写。
+- 使用 JSX 语法时你需要传入一个函数作为事件处理函数，而不是一个字符串。
+
+为JSX内时间绑定this的几种方式：
+
+- constructor内处理：
+```
+constructor() {
+  this.handleClick = this.handleClick.bind(this);
+}
+```
+- JSX内使用bind:
+```
+<button onClick={this.handleClick.bind(this, id)}>Delete Row</button>
+```
+- 箭头函数：
+```
+<button onClick={() => this.handleClick(id)}>Delete Row</button>
+```
+
+### key
+key 帮助 React 识别哪些元素改变了，比如被添加或删除。因此你应当给数组中的每一个元素赋予一个确定的标识。
+key 只是在兄弟节点之间必须唯一
