--- a/react/01.react-basic.md
+++ b/react/01.react-basic.md
@@ -136,3 +136,6 @@ constructor() {
 ### key
 key 帮助 React 识别哪些元素改变了，比如被添加或删除。因此你应当给数组中的每一个元素赋予一个确定的标识。
 key 只是在兄弟节点之间必须唯一
+
+### 受控组件
+使 React 的 state 成为“唯一数据源”。渲染表单的 React 组件还控制着用户输入过程中表单发生的操作。被 React 以这种方式控制取值的表单输入元素就叫做`受控组件`。
