--- a/react/03.redux.md
+++ b/react/03.redux.md
@@ -129,7 +129,7 @@ Redux 官方提供的 React 绑定库,具有高效且灵活的特性。此库并
          `[withRef = false]` (Boolean): 如果为 true，connector 会保存一个对被被包含的组件实例的引用，该引用通过 getWrappedInstance() 方法获得。默认值为 false。
 
 > ### 异步Ation
-[redux-saga](https://github.com/TigerHee/shareJS/blob/master/react/redux-saga.md)
+[redux-saga](https://github.com/TigerHee/shareJS/blob/master/react/04.redux-saga.md)
 
 > ### 示例项目:
 * 💯[tiger-react-cli](https://github.com/TigerHee/tiger-react-cli)
