--- a/react/01.react-basic.md
+++ b/react/01.react-basic.md
@@ -166,3 +166,6 @@ key 只是在兄弟节点之间必须唯一
 ### 受控组件
 
 使 React 的 state 成为“唯一数据源”。渲染表单的 React 组件还控制着用户输入过程中表单发生的操作。被 React 以这种方式控制取值的表单输入元素就叫做`受控组件`。
+
+### 进阶
+[redux-adcanve](https://github.com/TigerHee/shareJS/blob/master/react/02.react-advance.md)
