--- a/react/02.react-advance.md
+++ b/react/02.react-advance.md
@@ -74,3 +74,52 @@ class ThemedButton extends React.Component {
 
 `Context.Consumer`：
 这里，React 组件也可以订阅到 context 变更。这能让你在函数式组件中完成订阅 context。
+
+### Refs
+Refs 提供了一种方式，允许我们访问 DOM 节点或在 render 方法中创建的 React 元素。不能在函数组件上使用 ref 属性，因为他们没有实例，可以在函数组件内部使用 ref 属性。
+
+*适合使用 refs 的情况：*
+- 管理焦点，文本选择或媒体播放。
+- 触发强制动画。
+- 集成第三方 DOM 库。
+
+
+*使用方法：*
+
+1. 创建 Refs
+    - Refs 是使用 `React.createRef()` 创建的，并通过 `ref` 属性附加到 React 元素。
+  ```
+  class MyComponent extends React.Component {
+    constructor(props) {
+      super(props);
+      this.myRef = React.createRef();
+    }
+    render() {
+      return <div ref={this.myRef} />;
+    }
+  }
+  ```
+
+2. 访问 Refs
+    - 在 ref 的 `current` 属性中被访问
+  ```
+  const node = this.myRef.current;
+  ```
+
+### Refs 转发
+Ref 转发是一项将 ref 自动地通过组件传递到其一子组件的技巧。子组件使用`React.forwardRef`接收ref。可用于`Hoc`处理ref。
+
+### Fragments
+Fragments 允许你将子列表分组，而无需向 DOM 添加额外节点。key 是唯一可以传递给 Fragment 的属性
+```
+render() {
+  return (
+    <React.Fragment>
+      <ChildA />
+      <ChildB />
+      <ChildC />
+    </React.Fragment>
+  );
+}
+```
+`<React.Fragment></React.Fragment>`可简写为`<></>`
