--- a/react/02.react-advance.md
+++ b/react/02.react-advance.md
@@ -123,3 +123,63 @@ render() {
 }
 ```
 `<React.Fragment></React.Fragment>`可简写为`<></>`
+
+### 高阶组件（HOC）
+HOC是参数为组件，返回值为新组件的函数。
+
+HOC 不会修改传入的组件，也不会使用继承来复制其行为。相反，HOC 通过将组件包装在容器组件中来组成新组件。HOC 是纯函数，没有副作用。
+
+示例：
+```
+// 此函数接收一个组件...
+function withSubscription(WrappedComponent, selectData) {
+  // ...并返回另一个组件...
+  return class extends React.Component {
+    constructor(props) {
+      super(props);
+      this.handleChange = this.handleChange.bind(this);
+      this.state = {
+        data: selectData(DataSource, props)
+      };
+    }
+
+    componentDidMount() {
+      // ...负责订阅相关的操作...
+      DataSource.addChangeListener(this.handleChange);
+    }
+
+    componentWillUnmount() {
+      DataSource.removeChangeListener(this.handleChange);
+    }
+
+    handleChange() {
+      this.setState({
+        data: selectData(DataSource, this.props)
+      });
+    }
+
+    render() {
+      // ... 并使用新数据渲染被包装的组件!
+      // 请注意，我们可能还会传递其他属性
+      return <WrappedComponent data={this.state.data} {...this.props} />;
+    }
+  };
+}
+```
+上例中class组件为HOC的容器组件，容器组件担任分离将高层和低层关注的责任，由容器管理订阅和状态，并将 prop 传递给处理渲染 UI。HOC 使用容器作为其实现的一部分，你可以将 HOC 视为参数化容器组件。
+
+*注意事项：*
+- 不要在 render 方法中使用 HOC。
+  在render中使用会导致diff 算法在对比组件变化时每次检测都不一样，每次渲染都会进行卸载，和重新挂载的操作，这不仅仅是性能问题 - 重新挂载组件会导致该组件及其所有子组件的状态丢失。
+- 务必复制静态方法到容器组件上。
+  可以使用`hoist-non-react-statics`自动拷贝所有非 React 静态方法
+    ```
+    import hoistNonReactStatic from 'hoist-non-react-statics';
+    function enhance(WrappedComponent) {
+      class Enhance extends React.Component {/*...*/}
+      hoistNonReactStatic(Enhance, WrappedComponent);
+      return Enhance;
+    }
+    ```
+- Refs 不会被传递。
+  可用过Refs 转发解决
