--- a/react/01.react-basic.md
+++ b/react/01.react-basic.md
@@ -6,11 +6,46 @@
 - React DOM 在渲染所有输入内容之前，默认会进行转义。它可以确保在你的应用中，永远不会注入那些并非自己明确编写的内容。所有的内容在渲染之前都被转换成了字符串。
 - JSX 里的 class 变成了 className
 
+###### 深入了解：
+
+JSX 仅仅只是 React.createElement(component, props, ...children) 函数的语法糖。
+
+如下JSX代码：
+```
+<MyButton color="blue" shadowSize={2}>
+  Click Me
+</MyButton>
+```
+会编译为：
+```
+React.createElement(
+  MyButton,
+  {color: 'blue', shadowSize: 2},
+  'Click Me'
+)
+```
+
 ### 元素
 
 - 元素是构成 React 应用的最小砖块。
 - React 元素是创建开销极小的普通对象。React DOM 会负责更新 DOM 来与 React 元素保持一致。
 - 组件是由元素构成的。
+- `false`, `null`, `undefined`, `true` 是合法的子元素。但它们并不会被渲染。
+
+以下的 JSX 表达式渲染结果相同：
+```
+<div />
+
+<div></div>
+
+<div>{false}</div>
+
+<div>{null}</div>
+
+<div>{undefined}</div>
+
+<div>{true}</div>
+```
 
 ### 组件
 
@@ -31,6 +66,7 @@ class Welcome extends React.Component {
   }
 }
 ```
+
 ### props
 
 当 React 元素为用户自定义组件时，它会将 JSX 所接收的属性（attributes）转换为单个对象传递给组件，这个对象被称之为 “props”。组件无论是使用函数声明还是通过 class 声明，都决不能修改自身的 props
@@ -52,6 +88,10 @@ ReactDOM.render(
   3. Welcome 组件将 <h1>Hello, Sara</h1> 元素作为返回值。
   4. React DOM 将 DOM 高效地更新为 <h1>Hello, Sara</h1>。
 ```
+有多种方式可以在 JSX 中指定 props。
+  - JavaScript 表达式作为 Props
+  - 字符串字面量
+  - props 默认值为`true`
 
 ### State
 
@@ -166,6 +206,12 @@ key 只是在兄弟节点之间必须唯一
 ### 受控组件
 
 使 React 的 state 成为“唯一数据源”。渲染表单的 React 组件还控制着用户输入过程中表单发生的操作。被 React 以这种方式控制取值的表单输入元素就叫做`受控组件`。
+
+### 非受控组件
+
+表单数据将交由 DOM 节点来处理。使用非受控组件时如果想赋予组件一个初始值，但是不去控制后续的更新。 在这种情况下, 你可以指定一个 `defaultValue` 属性，而不是 value。
+
+`<input type="file" />` 始终是一个非受控组件
 
 ### 进阶
 [redux-adcanve](https://github.com/TigerHee/shareJS/blob/master/react/02.react-advance.md)
