--- a/react/01.react-basic.md
+++ b/react/01.react-basic.md
@@ -51,7 +51,7 @@ React.createElement(
 
 组件名称必须以大写字母开头(React 会将以小写字母开头的组件视为原生 DOM 标签)
 
-- 函数组件：
+- 函数组件（以前称之为无状态组件，但`Hook`出来之后叫为函数组件）：
 ```
 function Welcome(props) {
   return <h1>Hello, {props.name}</h1>;
