--- a/react/01.react-basic.md
+++ b/react/01.react-basic.md
@@ -115,8 +115,8 @@ class ExampleComponent extends React.Component {
   }
 
   // 用于替换 `componentWillReceiveProps` ，该函数会在初始化和 `update` 时被调用
-  // 因为该函数是静态函数，所以取不到 `this`
-  // 如果需要对比 `prevProps` 需要单独在 `state` 中维护
+  // 因为该函数是静态函数，所以取不到 `this`, 如果需要对比 `prevProps` 需要单独在 `state` 中维护
+  // 它应返回一个对象来更新 state
   static getDerivedStateFromProps(nextProps, prevState) {}
 
   // 判断是否需要更新组件，多用于组件性能优化
@@ -160,6 +160,7 @@ class ExampleComponent extends React.Component {
   // 以下函数不建议使用
   UNSAFE_componentWillMount() {}
   UNSAFE_componentWillUpdate(nextProps, nextState) {}
+  // 接收到新的props时调用
   UNSAFE_componentWillReceiveProps(nextProps) {}
 }
 ```
@@ -175,6 +176,9 @@ class ExampleComponent extends React.Component {
   - componentWillUnmount
 
 因为 reconciliation 阶段是可以被打断的，所以 reconciliation 阶段会执行的生命周期函数就可能会出现调用多次的情况，从而引起 Bug。所以对于 reconciliation 阶段调用的几个函数，除了 shouldComponentUpdate 以外，其他都应该避免去使用。
+
+#### V16.4以后生命周期图解（不包含官方不建议使用的）
+![avatar](../assets/img/reactLifecycle.png)
 
 ### 事件处理
 
