--- a/react/02.react-advance.md
+++ b/react/02.react-advance.md
@@ -291,3 +291,17 @@ StrictMode 不会渲染任何可见的 UI。它为其后代元素触发额外的
 - 关于使用废弃的 findDOMNode 方法的警告
 - 检测意外的副作用
 - 检测过时的 context API
+
+### React.memo
+
+`React.memo` 为高阶组件。它与 React.PureComponent 非常相似，但它适用于函数组件，但不适用于 class 组件。
+
+如果你的函数组件在给定相同 props 的情况下渲染相同的结果，那么你可以通过将其包装在 `React.memo` 中调用，以此通过记忆组件渲染结果的方式来提高组件的性能表现。这意味着在这种情况下，React 将跳过渲染组件的操作并直接复用最近一次渲染的结果。
+
+默认情况下其只会对复杂对象做浅层对比，如果你想要控制对比过程，那么请将自定义的比较函数通过第二个参数传入来实现。
+
+```
+const MyComponent = React.memo(function MyComponent(props) {
+  /* 使用 props 渲染 */
+});
+```
