--- a/react/01.react-basic.md
+++ b/react/01.react-basic.md
@@ -178,7 +178,7 @@ class ExampleComponent extends React.Component {
 因为 reconciliation 阶段是可以被打断的，所以 reconciliation 阶段会执行的生命周期函数就可能会出现调用多次的情况，从而引起 Bug。所以对于 reconciliation 阶段调用的几个函数，除了 shouldComponentUpdate 以外，其他都应该避免去使用。
 
 #### V16.4以后生命周期图解（不包含官方不建议使用的）
-![avatar](../assets/img/reactLifecycle.png)
+![生命周期](../assets/img/reactLifecycle.png)
 
 ### 事件处理
 
