重绘与回流

--- a/FE/重绘与回流.md
+++ b/FE/重绘与回流.md
@@ -27,3 +27,14 @@
 
 ![Event Loop](../assets/img/browerRender.png)
 
+### 如何减少重绘和回流
+
+减少回流和重绘其实就是需要减少对render tree的操作（合并多次多DOM和样式的修改），并减少对一些样式信息的请求，尽量利用好浏览器的优化策略。
+
+- 改变样式通过添加class或el.style.cssText，而不是el.style.单个属性
+- 尽可能少的修改dom，对于需要频繁操作的dom可以让其暂避重绘检查：
+  - 使用DocumentFragment进行缓存操作,引发一次回流和重绘
+  - 使用display:none暂时隐藏当前处理的dom
+  - 使用cloneNode(true or false) 和 replaceChild
+- 对于需要动画的元素使用定位使其脱离文档流
+
