--- a/react/06.React源码学习-createElment.md
+++ b/react/06.React源码学习-createElment.md
@@ -6,7 +6,7 @@
 
 此效果在 [Babel](https://babeljs.io/repl/) 上实现。
 
-React内是如何引用createElement:
+React.js内是如何引用createElement:
 ```
 //首先引入
 import {
@@ -26,7 +26,7 @@ const React = {
 export default React;
 ```
 
-createElement的代码：
+createElement代码在同级目录下 ReactElement.js 内：
 ```
 export function createElement(type, config, children) {
   let propName;
