--- a/react/08.React源码学习-数据结构.md
+++ b/react/08.React源码学习-数据结构.md
@@ -169,6 +169,6 @@ type Fiber = {|
 
 ![Event Loop](../assets/img/react_sc/FiberEl.png)
 
-处理成能高效遍历的树形结构后：
+被Fiber处理成能高效遍历的树形结构后：
 
 ![Event Loop](../assets/img/react_sc/FiberTree.jpg)
