--- a/react/09.React源码学习-update.md
+++ b/react/09.React源码学习-update.md
@@ -2,6 +2,10 @@
 
 ### 什么是update
 
+ - 用于记录组件状态的改变
+ - 存放于updateQueue中
+ - 多个update可以同时存在
+
 ### 如何创建update
 
 源码在 react-reconciler 下的 ReactUpdateQueue.js 内：
