--- a/react/11.React源码学习-任务调度.md
+++ b/react/11.React源码学习-任务调度.md
@@ -53,3 +53,39 @@ function scheduleWork(fiber: Fiber, expirationTime: ExpirationTime) {
   }
 }
 ```
+
+##### scheduleWork:
+
+- 加入到root调度队列
+- 判断是否批量更新
+- 根据expirationTime判断调度类型
+
+```
+function requestWork(root: FiberRoot, expirationTime: ExpirationTime) {
+  // 处理firstScheduledRoot,lastScheduledRoot,root的expirationTime
+  addRootToSchedule(root, expirationTime);
+  if (isRendering) {
+    // 已经开始
+    return;
+  }
+
+  if (isBatchingUpdates) {
+    // Flush work at the end of the batch.
+    if (isUnbatchingUpdates) {
+      // ...unless we're inside unbatchedUpdates, in which case we should
+      // flush it now.
+      nextFlushedRoot = root;
+      nextFlushedExpirationTime = Sync;
+      performWorkOnRoot(root, Sync, false);
+    }
+    return;
+  }
+
+  // TODO: Get rid of Sync and use current time?
+  if (expirationTime === Sync) {
+    performSyncWork();
+  } else {
+    scheduleCallbackWithExpirationTime(root, expirationTime);
+  }
+}
+```
