--- a/react/11.React源码学习-任务调度.md
+++ b/react/11.React源码学习-任务调度.md
@@ -54,7 +54,7 @@ function scheduleWork(fiber: Fiber, expirationTime: ExpirationTime) {
 }
 ```
 
-##### scheduleWork:
+##### requestWork:
 
 - 加入到root调度队列
 - 判断是否批量更新
