--- a/react/11.React源码学习-任务调度.md
+++ b/react/11.React源码学习-任务调度.md
@@ -202,5 +202,190 @@ function flushWork(didTimeout) {}
 
 ##### performWork:
 
+`performWork`通过两种方式调用:
 
+- performAsyncWork 异步方式
 
+异步情况给performWork设置的minExpirationTime是NoWork，并且会判断dl.didTimeout，这个值是指任务的expirationTime是否已经超时，如果超时了，则直接设置newExpirationTimeToWorkOn为当前时间，表示这个任务直接执行就行了，不需要判断是否超过了帧时间
+
+- performSyncWork 同步方式
+
+同步方式久比较简单了，设置minExpirationTime为Sync也就是1
+
+##### performWorkOnRoot
+
+这里也分为同步和异步两种情况，但是这两种情况的区别其实非常小。
+
+首先是一个参数的区别，isYieldy在同步的情况下是false，而在异步情况下是true。这个参数顾名思义就是是否可以中断，那么这个区别也就很好理解了。
+
+第二个区别就是在renderRoot之后判断一下shouldYeild，如果时间片已经用完，则不直接completeRoot，而是等到一下次requestIdleCallback之后再执行。
+
+`renderRoot` 和 `completeRoot` 分别对应两个阶段：
+
+- 渲染阶段
+- 提交阶段
+
+渲染阶段可以被打断，而提交阶段不能
+
+##### findHighestPriorityRoot
+
+一般情况下我们的 React 应用只会有一个root，所以这里的大部分逻辑其实都不是常见情况。
+
+循环`firstScheduledRoot => lastScheduledRoot`，`remainingExpirationTime`是`root.expirationTime`，也就是最早的过期时间。
+
+如果他是`NoWork`说明他已经没有任务了，从链表中删除。
+
+从剩下的中找到`expirationTime`最小的也就是优先级最高的`root`然后把他赋值给`nextFlushedRoot`并把他的`expirationTime`赋值给`nextFlushedExpirationTime`这两个公共变量。
+
+一般来说会直接执行下面这个逻辑
+
+```
+if (root === root.nextScheduledRoot) {
+  // This is the only root in the list.
+  root.nextScheduledRoot = null;
+  firstScheduledRoot = lastScheduledRoot = null;
+  break;
+}
+```
+
+##### renderRoot
+
+首先是一个判断是否需要初始化变量的判断
+```
+if (
+  expirationTime !== nextRenderExpirationTime ||
+  root !== nextRoot ||
+  nextUnitOfWork === null
+) {
+  // Reset the stack and start working from the root.
+  resetStack()
+  nextRoot = root
+  nextRenderExpirationTime = expirationTime
+  nextUnitOfWork = createWorkInProgress(
+    nextRoot.current,
+    null,
+    nextRenderExpirationTime,
+  )
+  root.pendingCommitExpirationTime = NoWork
+}
+```
+他判断的情况是是否有新的更新进来了。假设这种情况：上一个任务因为时间片用完了而中断了，这个时候nextUnitOfWork是有工作的，这时候如果下一个requestIdleCallback进来了，中途没有新的任务进来，那么这些全局变量都没有变过，root的nextExpirationTimeToWorkOn肯定也没有变化，那么代表是继续上一次的任务。而如果有新的更新进来，则势必nextExpirationTimeToWorkOn或者root会变化，那么肯定需要重置变量
+
+`resetStack`如果是被中断的情况，会推出`context`栈
+
+然后就进入整体，调用workLoop
+
+```
+function workLoop(isYieldy) {
+  if (!isYieldy) {
+    // Flush work without yielding
+    while (nextUnitOfWork !== null) {
+      nextUnitOfWork = performUnitOfWork(nextUnitOfWork)
+    }
+  } else {
+    // Flush asynchronous work until the deadline runs out of time.
+    while (nextUnitOfWork !== null && !shouldYield()) {
+      nextUnitOfWork = performUnitOfWork(nextUnitOfWork)
+    }
+  }
+}
+```
+workLoop逻辑很简单的，只是判断是否需要继续调用performUnitOfWork
+
+在workLoop执行完之后，就进入收尾阶段了。
+
+首先如果didFatal为true，代表有一个无法处理的错误，直接调用onFatal，不commit
+```
+function onFatal(root) {
+  root.finishedWork = null
+}
+```
+
+如果nextUnitOfWork !== null，代表任务没有执行完，是yield了，执行onYield
+
+```
+function onYield(root) {
+  root.finishedWork = null
+}
+```
+
+如果以上都没有，说明已经complete整棵树了，如果nextRenderDidError代表有捕获到可处理的错误
+
+这时候先判断是否有优先级更低的任务，有的话把当前的渲染时间设置进suspendTime，同时调用onSuspend
+
+如果不符合再判断是否帧时间超时，如果没有超时并且没有root.didError，并且把root.expirationTime设置为Sync，然后调用onSuspend。
+
+需要注意的是，他们调用onSuspend最后一个参数传递的都是-1，看onSuspend的逻辑可以发现其实什么都不做。什么都不做代表着，他们不会设置root.finishedWork，那么返回到上一层的performWorkOnRoot的时候
+
+```
+finishedWork = root.finishedWork
+if (finishedWork !== null) {
+  if (!shouldYield()) {
+    // Still time left. Commit the root.
+    completeRoot(root, finishedWork, expirationTime)
+  } else {
+    root.finishedWork = finishedWork
+  }
+}
+```
+并不会执行completeRoot也就不会commit，会再返回到performWork找下一个root
+```
+function onSuspend(
+  root: FiberRoot,
+  finishedWork: Fiber,
+  suspendedExpirationTime: ExpirationTime,
+  rootExpirationTime: ExpirationTime,
+  msUntilTimeout: number,
+): void {
+  root.expirationTime = rootExpirationTime
+  if (enableSuspense && msUntilTimeout === 0 && !shouldYield()) {
+    // Don't wait an additional tick. Commit the tree immediately.
+    root.pendingCommitExpirationTime = suspendedExpirationTime
+    root.finishedWork = finishedWork
+  } else if (msUntilTimeout > 0) {
+    // Wait `msUntilTimeout` milliseconds before committing.
+    root.timeoutHandle = scheduleTimeout(
+      onTimeout.bind(null, root, finishedWork, suspendedExpirationTime),
+      msUntilTimeout,
+    )
+  }
+}
+
+function onTimeout(root, finishedWork, suspendedExpirationTime) {
+  if (enableSuspense) {
+    // The root timed out. Commit it.
+    root.pendingCommitExpirationTime = suspendedExpirationTime
+    root.finishedWork = finishedWork
+    // Read the current time before entering the commit phase. We can be
+    // certain this won't cause tearing related to batching of event updates
+    // because we're at the top of a timer event.
+    recomputeCurrentRendererTime()
+    currentSchedulerTime = currentRendererTime
+
+    if (enableSchedulerTracing) {
+      // Don't update pending interaction counts for suspense timeouts,
+      // Because we know we still need to do more work in this case.
+      suspenseDidTimeout = true
+      flushRoot(root, suspendedExpirationTime)
+      suspenseDidTimeout = false
+    } else {
+      flushRoot(root, suspendedExpirationTime)
+    }
+  }
+}
+```
+其中scheduleTimeout是不同平台的setTimout
+
+最后一个判断就是真正的挂起任务了，也就是suquense的情况，其实做的事情跟上面两个差不多，唯一的区别是调用onSuspend的时候最后一个参数肯定是大于等于零的。代表着他是立刻就要commit还是在一个timeout之后再commit。因为我们可以看到onTimeout最后是flushRoot，就是以Sync的方式调用performWork
+
+如果以上逻辑都没有，那么直接调用onComplete
+```
+function onComplete(
+  root: FiberRoot,
+  finishedWork: Fiber,
+  expirationTime: ExpirationTime,
+) {
+  root.pendingCommitExpirationTime = expirationTime
+  root.finishedWork = finishedWork
+}
+```
