--- a/react/12.React源码学习-beginWork.md
+++ b/react/12.React源码学习-beginWork.md
@@ -42,6 +42,100 @@ function updateFunctionComponent(
 }
 ```
 调用`Component`时传入了两个值`nextProps`和`context`, 那么函数组件可以直接通过第二个参数拿到`context`，官方文档没有说明过这点。
+#### 2.ClassComponent
+```
+function updateClassComponent(
+  current: Fiber | null,
+  workInProgress: Fiber,
+  Component: any,
+  nextProps,
+  renderExpirationTime: ExpirationTime,
+) {
+  if (__DEV__) {
+    // 去掉__DEV__代码
+  }
+  // Push context providers early to prevent context stack mismatches.
+  // During mounting we don't know the child context yet as the instance doesn't exist.
+  // We will invalidate the child context in finishClassComponent() right after rendering.
+  let hasContext;
+  if (isLegacyContextProvider(Component)) {
+    hasContext = true;
+    pushLegacyContextProvider(workInProgress);
+  } else {
+    hasContext = false;
+  }
+  prepareToReadContext(workInProgress, renderExpirationTime);
+
+  const instance = workInProgress.stateNode;
+  let shouldUpdate;
+  if (instance === null) {
+    if (current !== null) {
+      // An class component without an instance only mounts if it suspended
+      // inside a non- concurrent tree, in an inconsistent state. We want to
+      // tree it like a new mount, even though an empty version of it already
+      // committed. Disconnect the alternate pointers.
+      current.alternate = null;
+      workInProgress.alternate = null;
+      // Since this is conceptually a new fiber, schedule a Placement effect
+      workInProgress.effectTag |= Placement;
+    }
+    // In the initial pass we might need to construct the instance.
+    constructClassInstance(
+      workInProgress,
+      Component,
+      nextProps,
+      renderExpirationTime,
+    );
+    mountClassInstance(
+      workInProgress,
+      Component,
+      nextProps,
+      renderExpirationTime,
+    );
+    shouldUpdate = true;
+  } else if (current === null) {
+    // In a resume, we'll already have an instance we can reuse.
+    shouldUpdate = resumeMountClassInstance(
+      workInProgress,
+      Component,
+      nextProps,
+      renderExpirationTime,
+    );
+  } else {
+    shouldUpdate = updateClassInstance(
+      current,
+      workInProgress,
+      Component,
+      nextProps,
+      renderExpirationTime,
+    );
+  }
+  const nextUnitOfWork = finishClassComponent(
+    current,
+    workInProgress,
+    Component,
+    shouldUpdate,
+    hasContext,
+    renderExpirationTime,
+  );
+  if (__DEV__) {
+    // 去掉__DEV__代码
+  }
+  return nextUnitOfWork;
+}
+```
+
+开始是对context的操作，因为ClassComponent可以成为context provider。
+
+current === null只会出现在第一次渲染的时候，因为会先创建workInProcess，在渲染结束之后才会把workInProcess拷贝成current，代表着第一次渲染结束。而后面也会出现根据current === null来判断是否需要调用componentDidMount的代码
+
+在这里如果current === null就行要进行实例的构建工作，如果不是，直接updateClassInstance
+
+如果是还要判断实例是否已经创建workInProgress.stateNode === null，如果是的话要创建这个实例，通过constructClassInstance(代码在同级的ReactFiberClassComponent.js内，这个方法调用adoptClassInstance给 ClassComponent 的实例挂载一个updater对象，里面包含我们常用的方法：forceUpdate, replaceState, setState)，并且挂载实例mountClassInstance（初始化 props、state 等实例属性，如果有updateQueue就更新之，一般来说第一次渲染是没有的。）
+
+如果已经有current则调用updateClassInstance
+
+最后调用finishClassComponent
 
 #### reconcileChildren
 
